--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
     "liveServer.settings.port": 5502,
-    "livePreview.defaultPreviewPath": "/chamber/directory.html"
+    "livePreview.defaultPreviewPath": "/chamber/Discover.html"
 }
